# cpp-basic

./: CMakeLists.txt  Identity.h  addressBook.cpp.bak  boss.cpp  boss.h  dynamicArray.cpp  employee.cpp  employee.h  globalFile.h  main.cpp  main_base.cpp.bak  main_base2.cpp.bak  manager.cpp  manager.h  manager_bak.cpp  manager_bak.h  myArray.hpp  myArrayUse.cpp  speaker.cpp  speaker.h  speechManager.cpp  speechManager.h  staffGroupByMap.cpp  student.cpp  student.h  student.txt  teacher.cpp  teacher.h  worker.cpp  worker.h  workerManger.cpp  workerManger.h
